fixing new indexation: fails on fussion